Added sections for both Stylefind projects

--- a/index.html
+++ b/index.html
@@ -43,30 +43,129 @@
   <div id="container">
     <div id="main">
       <div class="wrapper">
-        <p class="intro">Although this site is mobile optimized, I'd recommend viewing it on a PC for the best experience.</p>
+        <p class="intro">Although this site is mobile optimized, I'd recommend viewing it on a desktop for the best experience.</p>
 
         <article class="cv">
           <p>UX and Product Designer with 7+ years experience creating mobile and web apps. Currently, I'm the a co-founder of a (very) early stage company called <a href="http://stylefind.io/" target="_blank" title="Open stylefind.io in a new tab/window">Stylefind</a>. Previously I've worked at <a href="http://chaordix.com/" target="_blank" title="Open chaordix.com in a new tab/window">Chaordix</a> as a UX Designer & Product Manager, and <a href="http://waveapps.com/" target="_blank" title="Open waveapps.com in a new tab/window">Wave</a>, where I was the Product Designer & Manager of Mobile. I’m passionate about finding and solving problems by creating products that make a positive, lasting impact.</p>
         </article>
 
+        <article><!-- Stylefind v1.0 (iOS) -->
+          <div id="project_11" class="images">
+            <ul class="slides">
+              <li>
+                <a href="_img/stylefind_v2/stylefindv2-00-capture.png" class="img view" rel="project_11">
+                  <img src="_img/stylefind_v2/stylefindv2-00-capture_s2.png" class="no-boxshadow" alt="Stylefind - Capture view" />
+                </a>
+              </li>
+              <li>
+                <a href="_img/stylefind_v2/stylefindv2-01-uploading.png" class="img view" rel="project_11">
+                  <img src="_img/stylefind_v2/stylefindv2-01-uploading_s2.png" class="no-boxshadow" alt="Stylefind - Uploading view" />
+                </a>
+              </li>
+              <li>
+                <a href="_img/stylefind_v2/stylefindv2-02-results.png" class="img view" rel="project_11">
+                  <img src="_img/stylefind_v2/stylefindv2-02-results_s2.png" class="no-boxshadow" alt="Stylefind - Results view" />
+                </a>
+              </li>
+              <li>
+                <a href="_img/stylefind_v2/stylefindv2-03-result-info.png" class="img view" rel="project_11">
+                  <img src="_img/stylefind_v2/stylefindv2-03-result-info_s2.png" class="no-boxshadow" alt="Stylefind - Result info view" />
+                </a>
+              </li>
+              <li>
+                <a href="_img/stylefind_v2/stylefindv2-04-profile.png" class="img view" rel="project_11">
+                  <img src="_img/stylefind_v2/stylefindv2-04-profile_s2.png" class="no-boxshadow" alt="Stylefind - Profile view" />
+                </a>
+              </li>
+              <li>
+                <a href="_img/stylefind_v2/stylefindv2_05_list.png" class="img view" rel="project_11">
+                  <img src="_img/stylefind_v2/stylefindv2_05_list_s2.png" class="no-boxshadow" alt="Stylefind - List view" />
+                </a>
+              </li>
+              <li>
+                <a href="_img/stylefind_v2/stylefind_06_settings.png" class="img view" rel="project_11">
+                  <img src="_img/stylefind_v2/stylefind_06_settings_s2.png" class="no-boxshadow" alt="Stylefind - Settings view" />
+                </a>
+              </li>
+            </ul>
+            <div class="nav"></div>
+          </div>
+          <div class="description">
+            <div class="title">Stylefind (iOS) <span>- v1.0</span></div>
+            <div class="info">
+              <div id="prj11_s1_info" class="slide_info">
+                <em>"Find and buy items you love, quickly and easily."</em>
+                <br><br>
+                <p>Stylefind is an app for iOS that enables people to find where to buy the items they love by submitting an image.</p>
+                <br>
+                <p>Stylefind uses visual search and image recognition technology to provide visually similar, purchaseable results to users based on the images they submit</p>
+                <br>
+                <a href="_img/stylefind_v2/stylefind_v2-sign_up_flow.png" title="Stylefind v1.0 Wireframes - Sign up flow" target="_blank">Wireframes - Sign up flow A</a>
+                <br>
+                <a href="_img/stylefind_v2/stylefind_v2-authentication_flow.png" title="Stylefind v1.0 Wireframes - Sign up flow" target="_blank">Wireframes - Sign up flow B</a>
+                <br>
+                <a href="_img/stylefind_v2/stylefind_v2-app_flow.png" title="Stylefind v1.0 Wireframe - App flow" target="_blank">Wireframes - App flow</a>
+                <br><br>
+                <a href="_img/stylefind_v2/stylefind_v2-framer-signup.mp4" title="Stylefind v1.0 Framer - Sign up animations" target="_blank">Framer - Sign up animations</a>
+                <br>
+                <a href="_img/stylefind_v2/stylefind_v2-framer-results.mp4" title="Stylefind v1.0 Framer - Results animations" target="_blank">Framer - Results interactions</a>
+              </div>
+              <div id="prj11_s2_info" class="slide_info">
+                <p><a href="http://slyce.it" target="_blank" title="Open slyce.it in a new tab/window">Slyce Inc.</a> contracted me to design and build a consumer app that leverages their visual search technology. The goal was to create an app using APIs provided by Slyce that enabled users to get purchaseable results from the images they submitted. The app was to be used by Slyce during demonstrations to retailers and investors to showcase their technology.</p>
+              </div>
+              <div id="prj11_s3_info" class="slide_info">
+                <p>Once it was decided that we would take Payments by Wave for iOS from Hackathon to production I:</p>
+                <ul class="styled">
+                  <li>Gathered feedback from co-workers</li>
+                  <li>Improved the existing wireframes</li>
+                  <li>Polished up the visual design</li>
+                  <li>Created user stories for a beta build and beyond</li>
+                  <li>Worked with the Payments back-end team to create additional APIs</li>
+                  <li>Recruited and surveyed potential beta participants</li>
+                  <li>Collected feedback from 60 beta participants</li>
+                  <li>Definied measurable goals for the app after launch</li>
+                </ul>
+              </div>
+              <div id="prj11_s4_info" class="slide_info">
+                <p></p>
+              </div>
+              <div id="prj11_s5_info" class="slide_info">
+                <p></p>
+              </div>
+              <div id="prj11_s6_info" class="slide_info">
+                <strong>List view</strong>
+              </div>
+              <div id="prj11_s7_info" class="slide_info">
+                <strong>Settings view</strong>
+              </div>
+            </div>
+            <div class="tags">
+              <ul>
+                <li>Product management</li>
+                <li>Design</li>
+              </ul>
+            </div>
+          </div>
+        </article>
         <article><!-- Stylefind v0.25 (iOS) -->
           <div id="project_10" class="images">
             <ul class="slides">
               <li>
-                <a href="_img/stylefind_v1/stylefindv1_00_capture.png" class="img view" rel="project_10">
-                  <img src="_img/stylefind_v1/stylefindv1-00-capture_s2.png" class="no-boxshadow" alt="Stylefind - Capture view" />
+                <a href="_img/stylefind_v1/stylefindv1-00-capture.png" class="img view" rel="project_10">
+                  <img src="_img/stylefind_v1/stylefindv1-00-capture_s2.png" class="no-boxshadow" alt="Stylefind - Result view" />
                 </a>
               </li>
               <li>
-                <a href="_img/stylefind_v1/stylefindv1_01_uploading.png" class="img view" rel="project_10">
-                  <img src="_img/stylefind_v1/stylefindv1-01-uploading_s2.png" class="no-boxshadow" alt="Stylefind - Uploading view" />
+                <a href="_img/stylefind_v1/stylefindv1-01-uploading.png" class="img view" rel="project_10">
+                  <img src="_img/stylefind_v1/stylefindv1-01-uploading_s2.png" class="no-boxshadow" alt="Stylefind - Result view" />
                 </a>
               </li>
               <li>
-                <a href="_img/stylefind_v1/stylefindv1_02_results.png" class="img view" rel="project_10">
-                  <img src="_img/stylefind_v1/stylefind_02_results_s2.png" class="no-boxshadow" alt="Stylefind - Result view" />
+                <a href="_img/stylefind_v1/stylefindv1-02-results.png" class="img view" rel="project_10">
+                  <img src="_img/stylefind_v1/stylefindv1-02-results_s2.png" class="no-boxshadow" alt="Stylefind - Result view" />
                 </a>
               </li>
+
               <li>
                 <a href="_img/stylefind_v1/stylefind_03_card_input.png" class="img view" rel="project_10">
                   <img src="_img/stylefind_v1/stylefind_03_card_input_s2.png" class="no-boxshadow" alt="Stylefind - Card input view" />
@@ -91,17 +190,19 @@
             <div class="nav"></div>
           </div>
           <div class="description">
-            <div class="title">Stylefind (iOS) <span>- v1.0</span></div>
+            <div class="title">Stylefind (iOS) <span>- v0.25</span></div>
             <div class="info">
               <div id="prj10_s1_info" class="slide_info">
-                <p>Payments by Wave is a credit card &amp; cash stylefind app for iOS.</p>
-                <br>
-                <em>"With Payments by Wave you can easily accept credit and cash payments on your iOS device and have each transaction flow seamlessly into Wave's small business cloud accounting app."</em>
+                <em>"Find and buy items you love, quickly and easily."</em>
                 <br><br>
-                <a href="#" title="Stylefind v1.0 Wireframes" target="_blank">Wireframes</a>
+                <p>Stylefind is an app for iOS that enables people to find where to buy the items they love by submitting an image.</p>
+                <br>
+                <p>Stylefind uses visual search and image recognition technology to provide visually similar, purchaseable results to users based on the images they submit</p>
+                <br>
+                <a href="_img/stylefind_v1/stylefind_v1-flow.png" title="Stylefind v1.0 Wireframes" target="_blank">Wireframes</a>
               </div>
               <div id="prj10_s2_info" class="slide_info">
-                <p>Slide info</p>
+                <p><a href="http://slyce.it" target="_blank" title="Open slyce.it in a new tab/window">Slyce Inc.</a> contracted me to design and build a consumer app that leverages their visual search technology. The goal was to create an app using APIs provided by Slyce that enabled users to get purchaseable results from the images they submitted. The app was to be used by Slyce during demonstrations to retailers and investors to showcase their technology.</p>
               </div>
               <div id="prj10_s3_info" class="slide_info">
                 <p>Once it was decided that we would take Payments by Wave for iOS from Hackathon to production I:</p>
@@ -179,14 +280,16 @@
             <div class="nav"></div>
           </div>
           <div class="description">
-            <div class="title">Payments by Wave (iOS) <span>- Beta</span></div>
+            <div class="title">Payments by Wave (iOS)</div>
             <div class="info">
               <div id="prj9_s1_info" class="slide_info">
-                <p>Payments by Wave is a credit card &amp; cash payments app for iOS.</p>
-                <br>
                 <em>"With Payments by Wave you can easily accept credit and cash payments on your iOS device and have each transaction flow seamlessly into Wave's small business cloud accounting app."</em>
                 <br><br>
-                <a href="http://waveapps.com/mobilepaymentsbeta" title="waveapps.com/mobilepaymentsbeta" target="_blank">Beta sign up</a>
+                <p>Payments by Wave is a credit card &amp; cash payments app for iOS.</p>
+                <br>
+                <a href="https://itunes.apple.com/ca/app/payments-by-wave/id666409748?mt=8" title="iTunes - Payments by Wave" target="_blank">iTunes</a>
+                <br>
+                <a href="https://www.waveapps.com/payments/" title="waveapps.com/payments" target="_blank">Wave</a>
               </div>
               <div id="prj9_s2_info" class="slide_info">
                 <p>This app came to fruition in a slightly irregular way. For our first Hackathon at Wave I wanted to create an app that enabled users to accept a credit card (or cash) payment and then have the payment seamlessly flow into Wave's cloud accounting app.</p>
@@ -335,12 +438,12 @@
             <div class="title">Receipts by Wave (Android)</div>
             <div class="info">
               <div id="prj8_s1_info" class="slide_info">
-                <p>Receipts by Wave is a receipt scanning/OCR app for iOS and Android.</p>
-                <br>
                 <em>"With Receipts by Wave you can snap a photo of your receipt, verify the details and it connects seamlessly to your small biz accounting"</em>
                 <br><br>
-                <a href="https://itunes.apple.com/us/app/receipts-by-wave/id619867797?mt=8" title="iTunes - Receipts by Wave" target="_blank">iTunes</a>
-                &nbsp; | &nbsp;
+                <p>Receipts by Wave is a receipt scanning/OCR app for iOS and Android.</p>
+                <br>
+                <a href="https://play.google.com/store/apps/details?id=com.waveaccounting.receipts&hl=en" title="Google Play - Receipts by Wave" target="_blank">Google Play</a>
+                <br>
                 <a href="http://waveapps.com/receipts" title="waveapps.com/receipts" target="_blank">Wave</a>
               </div>
               <div id="prj8_s2_info" class="slide_info">
@@ -426,12 +529,16 @@
             <div class="title">Receipts by Wave (iOS)</div>
             <div class="info">
               <div id="prj7_s1_info" class="slide_info">
-                <p>Receipts by Wave is a receipt scanning/OCR app for iOS and Android.</p>
-                <br>
                 <em>"With Receipts by Wave you can snap a photo of your receipt, verify the details and it connects seamlessly to your small biz accounting"</em>
                 <br><br>
+                <p>Receipts by Wave is a receipt scanning/OCR app for iOS and Android.</p>
+                <br>
+                <a href="_img/receipts/Receipts by Wave - Wireframes V1.pdf" title="Wireframes v1" target="_blank">Wireframes - App flow v1</a>
+                <br>
+                <a href="_img/receipts/Receipts by Wave - Wireframes V3.pdf" title="Wireframes v3" target="_blank">Wireframes - App flow v3</a>
+                <br><br>
                 <a href="https://itunes.apple.com/us/app/receipts-by-wave/id619867797?mt=8" title="iTunes - Receipts by Wave" target="_blank">iTunes</a>
-                &nbsp; | &nbsp;
+                <br>
                 <a href="http://waveapps.com/receipts" title="waveapps.com/receipts" target="_blank">Wave</a>
               </div>
               <div id="prj7_s2_info" class="slide_info">
@@ -510,15 +617,20 @@
             <div class="title">Payroll by Wave (iOS)</div>
             <div class="info">
               <div id="prj6_s1_info" class="slide_info">
-                <p>Payroll by Wave is a payroll app for iOS that enables our Payroll users to run their payroll, anywhere.</p>
-                <br>
                 <em>"Run payroll for your small business in less than a minute. Wave’s payroll tool is the easiest, most affordable way for small businesses to pay their employees."</em>
                 <br><br>
+                <p>Payroll by Wave is a payroll app for iOS that enables our Payroll users to run their payroll, anywhere.</p>
+                <br>
+                <a href="_img/payroll/payroll-app_flow.pdf" target="_blank" title="Payroll by Wave - Wireframes">Wireframes - App flow
+                </a>
+                <br>
+                <a href="_img/payroll/payroll-app_flow_personal.pdf" target="_blank" title="Payroll by Wave - Wireframes (Personal)">Wireframes - App flow (Personal)</a>
+                <br>br
                 <a href="https://itunes.apple.com/ca/app/payroll-by-wave/id574934356?mt=8" title="iTunes - Payroll by Wave" target="_blank">iTunes</a>
-                &nbsp; | &nbsp;
+                <br>
                 <a href="https://www.waveapps.com/payroll/mobile/" title="waveapps.com/payroll/mobile" target="_blank">Wave</a>
-                &nbsp; | &nbsp;
-                <a href="https://www.youtube.com/watch?feature=player_embedded&v=BWDG3LRJfVA" title="Payroll by Wave - Product video">Product video</a>
+                <br>
+                <a href="https://www.youtube.com/watch?feature=player_embedded&v=BWDG3LRJfVA" target="_blank" title="Payroll by Wave - Product video">Product video</a>
               </div>
               <div id="prj6_s2_info" class="slide_info">
                 <p>Payroll by Wave was the 1st mobile offering from Wave. Our goals were to:</p>
