Added content to the Stylefind section

--- a/index.html
+++ b/index.html
@@ -81,43 +81,41 @@
             <div class="nav"></div>
           </div>
           <div class="description">
-            <div class="title">Stylefind (iOS) <span>- v1.0</span></div>
+            <div class="title">Stylefind iOS <span>- v1.0</span> WIP</div>
             <div class="info">
               <div id="prj11_s1_info" class="slide_info">
                 <em>"Find and buy items you love, quickly and easily."</em>
                 <br><br>
-                <p>Stylefind is an app for iOS that enables people to find where to buy the items they love by submitting an image.</p>
-                <p>Stylefind uses visual search and image recognition technology to provide visually similar, purchaseable results to users based on the images they submit</p>
+                <p>Stylefind is an app that enables people to find where to buy the items they love by submitting a images.</p>
+                <p>Using visual search and image recognition technology, Stylefind provides visually similar, purchaseable results to users based on the images they submit</p>
+
                 <a href="_img/stylefind_v2/stylefind_v2-sign_up_flow.png" title="Stylefind v1.0 Wireframes - Sign up flow" target="_blank">Wireframes - Sign up flow A</a>
                 <br>
                 <a href="_img/stylefind_v2/stylefind_v2-authentication_flow.png" title="Stylefind v1.0 Wireframes - Sign up flow" target="_blank">Wireframes - Sign up flow B</a>
                 <br>
                 <a href="_img/stylefind_v2/stylefind_v2-app_flow.png" title="Stylefind v1.0 Wireframe - App flow" target="_blank">Wireframes - App flow</a>
-                <br><br>
+                <br>
                 <a href="_img/stylefind_v2/stylefind_v2-framer-signup.mp4" title="Stylefind v1.0 Framer - Sign up animations" target="_blank">Framer - Sign up animations</a>
                 <br>
                 <a href="_img/stylefind_v2/stylefind_v2-framer-results.mp4" title="Stylefind v1.0 Framer - Results animations" target="_blank">Framer - Results interactions</a>
               </div>
               <div id="prj11_s2_info" class="slide_info">
-                <p><a href="http://slyce.it" target="_blank" title="Open slyce.it in a new tab/window">Slyce Inc.</a> contracted me to design and build a consumer app that leverages their visual search technology. The goal was to create an app using APIs provided by Slyce that enabled users to get purchaseable results from the images they submitted. The app was to be used by Slyce during demonstrations to retailers and investors to showcase their technology.</p>
+                <strong>The Problem</strong><br><br>
+                <p>I was contracted by <a href="http://slyce.it" target="_blank" title="Open slyce.it in a new tab/window">Slyce Inc.</a> to design and build a consumer app for iOS that leveraged their visual search technology.</p>
+                <p>The goal was to create an app that would showcase this technology in a very favorable light. Using the provided APIs, I needed to enable users to get purchaseable results from the images they submitted. Ultimately, the app would be used by Slyce to demonstrate to retailers and investors the power and accuracy of their visual search magic.</p>
               </div>
               <div id="prj11_s3_info" class="slide_info">
-                <p>Once it was decided that we would take Payments by Wave for iOS from Hackathon to production I:</p>
-                <ul class="styled">
-                  <li>Gathered feedback from co-workers</li>
-                  <li>Improved the existing wireframes</li>
-                  <li>Polished up the visual design</li>
-                  <li>Created user stories for a beta build and beyond</li>
-                  <li>Worked with the Payments back-end team to create additional APIs</li>
-                  <li>Recruited and surveyed potential beta participants</li>
-                  <li>Collected feedback from 60 beta participants</li>
-                  <li>Definied measurable goals for the app after launch</li>
-                </ul>
+                <strong>The Solution</strong><br><br>
+                <p>After talking with the stakeholders at Slyce, it was apparent that speed and accuracy were critical to the app's success. In order to showcase the powerful technology Slyce offers, I needed strip away all but the essential features that would enable users to quickly submit an image and get purchasable results back within seconds.</p>
+                <p>I felt that "perceived" speed would play a key role and should be a focal point during the design and development of the app. Things like starting image uploads early would go a long way in making the app feel faster.</p>
               </div>
               <div id="prj11_s4_info" class="slide_info">
+                <strong>Behind the Scenes</strong><br><br>
+                <p>I began by wireframing the required views for the app and outlining the user's flow through the app.</p>
                 <p></p>
               </div>
               <div id="prj11_s5_info" class="slide_info">
+                <strong>Prototyping</strong>
                 <p></p>
               </div>
             </div>
@@ -177,6 +175,8 @@
               <div id="prj10_s1_info" class="slide_info">
                 <em>"Find and buy items you love, quickly and easily."</em>
                 <br><br>
+                <strong>OVERVIEW</strong>
+                <br>
                 <p>Stylefind is an app for iOS that enables people to find where to buy the items they love by submitting an image.</p>
                 <p>Stylefind uses visual search and image recognition technology to provide visually similar, purchaseable results to users based on the images they submit</p>
                 <a href="_img/stylefind_v1/stylefind_v1-flow.png" title="Stylefind v1.0 Wireframes" target="_blank">Wireframes</a>
