--- a/stylefind.html
+++ b/stylefind.html
@@ -61,12 +61,12 @@
       </section>
       <hr>
       <section>
-        <h3>Problem</h3>
+        <h3>The Problem</h3>
         <p>Nullam vel dolor id mi venenatis ultricies. Etiam gravida turpis ac eros imperdiet, et facilisis dolor vehicula. Etiam in sodales dolor. In porttitor nulla ac odio elementum, in imperdiet magna auctor. Ut porttitor nunc id nibh vehicula vestibulum. Aliquam gravida odio tortor, in hendrerit sem adipiscing ut. Donec malesuada ornare tortor sed facilisis. Suspendisse lacinia tincidunt tortor quis fermentum. Donec accumsan porttitor tellus ac tincidunt. Quisque vitae enim luctus, mattis elit pretium, posuere tellus. Pellentesque pretium ut leo at euismod. Mauris tincidunt, enim id consequat faucibus, dui turpis condimentum justo, vel tincidunt nisi lectus quis eros. Nunc nulla arcu, porta eu orci quis, sodales eleifend nunc.</p>
       </section>
       <hr>
       <section>
-        <h3>Solution</h3>
+        <h3>The Solution</h3>
         <p>Aliquam sollicitudin nulla dui, ac lacinia leo interdum eget. In vel erat ut sem elementum porta ac et leo. Morbi leo diam, consectetur ut nibh vel, tincidunt elementum sapien. Nunc ac euismod dolor. Nam felis erat, egestas eu leo ultrices, lobortis tempor elit. Sed quis enim ante. Donec porttitor risus est, non sodales ligula porta sollicitudin. Vestibulum fringilla elit ipsum. Sed elit massa, fermentum quis est vitae, iaculis elementum urna. Cras id mollis dolor. In ultrices suscipit elementum. Sed gravida justo sit amet orci sodales, in vehicula urna ullamcorper.</p>
       </section>
       <hr>
