--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
               <div id="prj11_s2_info" class="slide_info">
                 <strong>The Problem</strong><br><br>
                 <p>I was contracted by <a href="http://slyce.it" target="_blank" title="Open slyce.it in a new tab/window">Slyce Inc.</a> to design and build a consumer app for iOS that leveraged their visual search technology.</p>
-                <p>The goal was to create an app that would showcase this technology in a very favorable light. Using the provided APIs, I needed to enable users to get purchaseable results from the images they submitted. Ultimately, the app would be used by Slyce to demonstrate to retailers and investors the power and accuracy of their visual search magic.</p>
+                <p>The goal was to create an app that would showcase this technology in a very favorable light. Using the provided APIs, I needed to enable people to get purchaseable results from the images they submitted. Ultimately, the app would be used by Slyce to demonstrate to retailers and investors the power and accuracy of their visual search magic.</p>
               </div>
               <div id="prj11_s3_info" class="slide_info">
                 <strong>The Solution</strong><br><br>
-                <p>After talking with the stakeholders at Slyce, it was apparent that speed and accuracy were critical to the app's success. In order to showcase the powerful technology Slyce offers, I needed strip away all but the essential features that would enable users to quickly submit an image and get purchasable results back within seconds.</p>
+                <p>After talking with the stakeholders at Slyce, it was apparent that speed and accuracy were critical to the app's success. In order to showcase the powerful technology Slyce offers, I needed strip away all but the essential features that would enable people to quickly submit an image and get purchasable results back within seconds.</p>
                 <p>I felt that "perceived" speed would play a key role and should be a focal point during the design and development of the app. Things like starting image uploads early would go a long way in making the app feel faster.</p>
               </div>
               <div id="prj11_s4_info" class="slide_info">
@@ -156,16 +156,6 @@
                   <img src="_img/stylefind_v1/stylefind_04_menu_s2.png" class="no-boxshadow" alt="Stylefind - Menu view" />
                 </a>
               </li>
-              <li>
-                <a href="_img/stylefind_v1/stylefind_05_list.png" class="img view" rel="project_10">
-                  <img src="_img/stylefind_v1/stylefind_05_list_s2.png" class="no-boxshadow" alt="Stylefind - List view" />
-                </a>
-              </li>
-              <li>
-                <a href="_img/stylefind_v1/stylefind_06_settings.png" class="img view" rel="project_10">
-                  <img src="_img/stylefind_v1/stylefind_06_settings_s2.png" class="no-boxshadow" alt="Stylefind - Settings view" />
-                </a>
-              </li>
             </ul>
             <div class="nav"></div>
           </div>
@@ -175,39 +165,29 @@
               <div id="prj10_s1_info" class="slide_info">
                 <em>"Find and buy items you love, quickly and easily."</em>
                 <br><br>
-                <strong>OVERVIEW</strong>
-                <br>
-                <p>Stylefind is an app for iOS that enables people to find where to buy the items they love by submitting an image.</p>
-                <p>Stylefind uses visual search and image recognition technology to provide visually similar, purchaseable results to users based on the images they submit</p>
+                <p>Stylefind is an app that enables people to find where to buy the items they love by submitting a images.</p>
+                <p>Using visual search and image recognition technology, Stylefind provides visually similar, purchaseable results to users based on the images they submit</p>
+
                 <a href="_img/stylefind_v1/stylefind_v1-flow.png" title="Stylefind v1.0 Wireframes" target="_blank">Wireframes</a>
               </div>
               <div id="prj10_s2_info" class="slide_info">
-                <p><a href="http://slyce.it" target="_blank" title="Open slyce.it in a new tab/window">Slyce Inc.</a> contracted me to design and build a consumer app that leverages their visual search technology. The goal was to create an app using APIs provided by Slyce that enabled users to get purchaseable results from the images they submitted. The app was to be used by Slyce during demonstrations to retailers and investors to showcase their technology.</p>
+                <strong>Problem</strong><br><br>
+                <p>I was contracted by <a href="http://slyce.it" target="_blank" title="Open slyce.it in a new tab/window">Slyce Inc.</a> to design and build a consumer app for iOS that leveraged their visual search technology.</p>
+                <p>The goal was to create an app that would showcase this technology in a very favorable light. Using the provided APIs, we needed to enable people to get purchaseable results from the images they submitted. Ultimately, the app would be used by Slyce to demonstrate to retailers and investors the power and accuracy of their visual search magic.</p>
               </div>
               <div id="prj10_s3_info" class="slide_info">
-                <p>Once it was decided that we would take Payments by Wave for iOS from Hackathon to production I:</p>
-                <ul class="styled">
-                  <li>Gathered feedback from co-workers</li>
-                  <li>Improved the existing wireframes</li>
-                  <li>Polished up the visual design</li>
-                  <li>Created user stories for a beta build and beyond</li>
-                  <li>Worked with the Payments back-end team to create additional APIs</li>
-                  <li>Recruited and surveyed potential beta participants</li>
-                  <li>Collected feedback from 60 beta participants</li>
-                  <li>Definied measurable goals for the app after launch</li>
-                </ul>
+                <strong>Research & Hypothesis</strong><br><br>
+                <p>After talking with the stakeholders at Slyce, it was apparent that speed and accuracy were critical to the app's success. In order to showcase the powerful technology Slyce offers, we needed to enable people to easily submit an image and get purchasable results back quickly, in a simple and frictionless way. I knew that perceived speed would need to be a focal point during the design and development of the app. Starting image uploads as early as possible and other slight of hand like tricks would go a long way in making the app feel faster.</p>
               </div>
               <div id="prj10_s4_info" class="slide_info">
-                <p></p>
+                <strong>Behind the Scenes</strong><br><br>
+                <p>I began by wireframing the required views for the app to outline the user's flow through the app. During this process it became clear that enabling people to filter results, or select a category before uploading their image, didn't address the goal of the project. While these features seemed to offer a better overall experience, neither helped to showcase the speed or accuracy of the results Slyce could procide.</p>
+                <a href="_img/stylefind_v1/stylefind_v1-flow.png" title="Stylefind v1.0 Wireframes" target="_blank">Wireframes</a>
               </div>
               <div id="prj10_s5_info" class="slide_info">
-                <p></p>
-              </div>
-              <div id="prj10_s6_info" class="slide_info">
-                <strong>List view</strong>
-              </div>
-              <div id="prj10_s7_info" class="slide_info">
-                <strong>Settings view</strong>
+                <strong>Solution</strong><br><br>
+                <p>After a few iterations to tweak how we displayed feedback to the user when their image was uploading, how the results were displayed and how soon the user would be sent to the checkout webview (i.e. removing the result info view), we arrived at our finished product - the Stylefind prototype, so to speak.</p>
+                <p>The final app was such a hit with Slyce that we decided to spin it off into is own company to create a full consumer app experience that harnesses the power of Slyce.</p>
               </div>
             </div>
             <div class="tags">
