Updated Stylefind case study page copy and wireframe images

--- a/stylefind.html
+++ b/stylefind.html
@@ -62,44 +62,45 @@
       <hr>
       <section>
         <h3>The Problem</h3>
-        <p>Nullam vel dolor id mi venenatis ultricies. Etiam gravida turpis ac eros imperdiet, et facilisis dolor vehicula. Etiam in sodales dolor. In porttitor nulla ac odio elementum, in imperdiet magna auctor. Ut porttitor nunc id nibh vehicula vestibulum. Aliquam gravida odio tortor, in hendrerit sem adipiscing ut. Donec malesuada ornare tortor sed facilisis. Suspendisse lacinia tincidunt tortor quis fermentum. Donec accumsan porttitor tellus ac tincidunt. Quisque vitae enim luctus, mattis elit pretium, posuere tellus. Pellentesque pretium ut leo at euismod. Mauris tincidunt, enim id consequat faucibus, dui turpis condimentum justo, vel tincidunt nisi lectus quis eros. Nunc nulla arcu, porta eu orci quis, sodales eleifend nunc.</p>
+        <p>I was contracted by <a href="http://slyce.it" target="_blank" title="Open slyce.it in a new tab/window">Slyce Inc.</a> to design and build a consumer app for iOS that leveraged their visual search technology.</p>
+        <p>The goal was to create an app that would showcase this technology in a very favorable light. Using the provided APIs, we needed to enable people to get purchaseable results from the images they submitted. Ultimately, the app would be used by Slyce to demonstrate to retailers and investors the power and accuracy of their visual search magic.</p>
       </section>
       <hr>
       <section>
-        <h3>The Solution</h3>
-        <p>Aliquam sollicitudin nulla dui, ac lacinia leo interdum eget. In vel erat ut sem elementum porta ac et leo. Morbi leo diam, consectetur ut nibh vel, tincidunt elementum sapien. Nunc ac euismod dolor. Nam felis erat, egestas eu leo ultrices, lobortis tempor elit. Sed quis enim ante. Donec porttitor risus est, non sodales ligula porta sollicitudin. Vestibulum fringilla elit ipsum. Sed elit massa, fermentum quis est vitae, iaculis elementum urna. Cras id mollis dolor. In ultrices suscipit elementum. Sed gravida justo sit amet orci sodales, in vehicula urna ullamcorper.</p>
+        <h3>Research & Hypothesis</h3>
+        <p>After talking with the stakeholders at Slyce, it was apparent that speed and accuracy were critical to the app's success. In order to showcase the powerful technology Slyce offers, we needed to enable people to easily submit an image and get purchasable results back quickly, in a simple and frictionless way. I knew that perceived speed would need to be a focal point during the design and development of the app. Starting image uploads as early as possible and other slight of hand like tricks would go a long way in making the app feel faster.</p>
       </section>
       <hr>
       <section>
         <h3>Behind the Scenes</h3>
-        <p>Aliquam sollicitudin nulla dui, ac lacinia leo interdum eget. In vel erat ut sem elementum porta ac et leo. Morbi leo diam, consectetur ut nibh vel, tincidunt elementum sapien. Nunc ac euismod dolor. Nam felis erat, egestas eu leo ultrices, lobortis tempor elit. Sed quis enim ante. Donec porttitor risus est, non sodales ligula porta sollicitudin. Vestibulum fringilla elit ipsum. Sed elit massa, fermentum quis est vitae, iaculis elementum urna. Cras id mollis dolor. In ultrices suscipit elementum. Sed gravida justo sit amet orci sodales, in vehicula urna ullamcorper.</p>
+        <p>I began by wireframing the required views for the app to outline the user's flow through the app. During this process it became clear that enabling people to filter results, or select a category before uploading their image, didn't address the goal of the project. While these features seemed to offer a better overall experience, neither helped to showcase the speed or accuracy of the results Slyce could procide.</p>
       </section>
       <hr>
-      <section class="images iphone">
+      <section class="images wires">
         <ul>
           <li>
-            <a href="_img/stylefind_v2/stylefindv2-00-capture.png" class="img view" rel="project_11">
-              <img src="_img/stylefind_v2/stylefindv2-00-capture_s2.png" class="no-boxshadow" alt="Stylefind - Capture view" />
+            <a href="_img/stylefind_v1/stylefind_v1-flow.png" class="img view" rel="wires_1">
+              <img src="_img/stylefind_v1/stylefind_v1-flow.png" class="no-boxshadow" alt="Stylefind - Demo app flow" />
             </a>
           </li>
           <li>
-            <a href="_img/stylefind_v2/stylefindv2-01-uploading.png" class="img view" rel="project_11">
-              <img src="_img/stylefind_v2/stylefindv2-01-uploading_s2.png" class="no-boxshadow" alt="Stylefind - Uploading view" />
+            <a href="_img/stylefind_v2/stylefind_v2-sign_up_flow.png" class="img view" rel="wires_1">
+              <img src="_img/stylefind_v2/stylefind_v2-sign_up_flow.png" class="no-boxshadow" alt="Stylefind - Sign up flow 1" />
             </a>
           </li>
           <li>
-            <a href="_img/stylefind_v2/stylefindv2-02-results.png" class="img view" rel="project_11">
-              <img src="_img/stylefind_v2/stylefindv2-02-results_s2.png" class="no-boxshadow" alt="Stylefind - Results view" />
+            <a href="_img/stylefind_v2/stylefind_v2-auth_flow1.png" class="img view" rel="wires_1">
+              <img src="_img/stylefind_v2/stylefind_v2-auth_flow1.png" class="no-boxshadow" alt="Stylefind - Sign up flow 2" />
             </a>
           </li>
           <li>
-            <a href="_img/stylefind_v2/stylefindv2-03-result-info.png" class="img view" rel="project_11">
-              <img src="_img/stylefind_v2/stylefindv2-03-result-info_s2.png" class="no-boxshadow" alt="Stylefind - Result info view" />
+            <a href="_img/stylefind_v2/stylefind_v2-auth_flow2.png" class="img view" rel="wires_1">
+              <img src="_img/stylefind_v2/stylefind_v2-auth_flow2.png" class="no-boxshadow" alt="Stylefind - Sign up flow 2" />
             </a>
           </li>
           <li>
-            <a href="_img/stylefind_v2/stylefindv2-04-profile.png" class="img view" rel="project_11">
-              <img src="_img/stylefind_v2/stylefindv2-04-profile_s2.png" class="no-boxshadow" alt="Stylefind - Profile view" />
+            <a href="_img/stylefind_v2/stylefind_v2-app_flow.png" class="img view" rel="wires_1">
+              <img src="_img/stylefind_v2/stylefind_v2-app_flow.png" class="no-boxshadow" alt="Stylefind - App flow" />
             </a>
           </li>
         </ul>
@@ -108,6 +109,42 @@
       <section>
         <h3>Prototyping</h3>
         <p>Aliquam sollicitudin nulla dui, ac lacinia leo interdum eget. In vel erat ut sem elementum porta ac et leo. Morbi leo diam, consectetur ut nibh vel, tincidunt elementum sapien. Nunc ac euismod dolor. Nam felis erat, egestas eu leo ultrices, lobortis tempor elit. Sed quis enim ante. Donec porttitor risus est, non sodales ligula porta sollicitudin. Vestibulum fringilla elit ipsum. Sed elit massa, fermentum quis est vitae, iaculis elementum urna. Cras id mollis dolor. In ultrices suscipit elementum. Sed gravida justo sit amet orci sodales, in vehicula urna ullamcorper.</p>
+      </section>
+      <hr>
+      <section>
+        <h3>Solution</h3>
+        <p>After a few iterations to tweak how we displayed feedback to the user when their image was uploading, how the results were displayed and how soon the user would be sent to the checkout webview (i.e. removing the result info view), we arrived at our finished product - the Stylefind prototype, so to speak.</p>
+        <p>The final app was such a hit with Slyce that we decided to spin it off into is own company to create a full consumer app experience that harnesses the power of Slyce.</p>
+      </section>
+      <hr>
+      <section class="images iphone">
+        <ul>
+          <li>
+            <a href="_img/stylefind_v2/stylefindv2-00-capture.png" class="img view" rel="mocks_1">
+              <img src="_img/stylefind_v2/stylefindv2-00-capture_s2.png" width="276" height="791" class="no-boxshadow" alt="Stylefind - Capture view" />
+            </a>
+          </li>
+          <li>
+            <a href="_img/stylefind_v2/stylefindv2-01-uploading.png" class="img view" rel="mocks_1">
+              <img src="_img/stylefind_v2/stylefindv2-01-uploading_s2.png" width="276" height="791" class="no-boxshadow" alt="Stylefind - Uploading view" />
+            </a>
+          </li>
+          <li>
+            <a href="_img/stylefind_v2/stylefindv2-02-results.png" class="img view" rel="mocks_1">
+              <img src="_img/stylefind_v2/stylefindv2-02-results_s2.png" width="276" height="791" class="no-boxshadow" alt="Stylefind - Results view" />
+            </a>
+          </li>
+          <li>
+            <a href="_img/stylefind_v2/stylefindv2-03-result-info.png" class="img view" rel="mocks_1">
+              <img src="_img/stylefind_v2/stylefindv2-03-result-info_s2.png" width="276" height="791" class="no-boxshadow" alt="Stylefind - Result info view" />
+            </a>
+          </li>
+          <li>
+            <a href="_img/stylefind_v2/stylefindv2-04-profile.png" class="img view" rel="mocks_1">
+              <img src="_img/stylefind_v2/stylefindv2-04-profile_s2.png" width="276" height="791" class="no-boxshadow" alt="Stylefind - Profile view" />
+            </a>
+          </li>
+        </ul>
       </section>
     </article>
   </div>
